# ominus

./: .env.example  .env.openclaw  .gitignore  AI-TEAM-READY.md  BROWSER-COMPATIBILITY-TESTING.md  COMPLETION-SUMMARY.txt  Cargo.toml  Dockerfile  FEATURES.md  FINAL-SUMMARY.md  GITHUB-VERIFICATION.md  GROQ-SETUP-GUIDE.md  LICENSE  MOBILE-RESPONSIVE.md  PHASE-1-COMPLETE.md  PHASE-2-COMPLETE.md  PHASE-2-EMAIL-CALENDAR.md  PHASE-3-COMPLETE.md  PHASE-3-FRONTEND-PWA.md  PHASE-3-INTEGRATION.md  PHASE-4-SUMMARY.txt  PROJECT-STATUS-PHASE3.md  PROJECT-STATUS.md  QUICK-FIX-SUMMARY.md  QUICKSTART-PHASE3.md  QUICKSTART.md  README.md  REAL-BACKEND.md  RESPONSIVE-SUMMARY.md  SETTINGS-FIX-COMPLETE.md  TEAM-COLLABORATION.md  TEST-SETTINGS.md  TRANSFORMATION-SUMMARY.md  ZERO-SETUP-START.md  ai-team.js  app.js  build.bat  docker-compose.yml  index-pwa.html  index.html  (+6 more)
.github/workflows/: build.yml  pages.yml
client/: app-pwa-old.js  app-pwa.js  manifest.json  service-worker.js  style-pwa.css
docs/: app.js  index.html  style.css
server/: AdvancedServer.js  index.js
server/automation/: AutomationEngine.js
server/integrations/kernel/: AIKernel.js  KernelAPI.js  KernelCLI.js
server/integrations/openclaw/: OpenClawBridge.js  (+1 more)
server/models/: AIModelRouter.js
server/services/: CalendarService.js  EmailFilteringService.js  FileProcessor.js  GmailService.js  TaskSchedulerService.js  VoiceService.js  WebScraperService.js  WebhookService.js
server/utils/: database.js
src/: api.rs  main.rs  models.rs  storage.rs
static/: app.js  index.html  style.css
test/: kernel-simple.js
(+4 files in other folders)
